<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ac__installation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.suleman.finalproject.AC_Installation"
    android:orientation="vertical"
    android:background="@color/activity_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/total_bg"
        android:id="@+id/be"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Estimated Total"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:layout_weight="0.4"
            android:textColor="@color/white"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Total : Rs 0"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:layout_weight="0.6"
            android:id="@+id/total"
            android:textAlignment="textEnd"
            android:textColor="@color/white"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select Quantity Based On Your Requirement"
        android:layout_margin="5dp"
        android:textSize="13sp"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/rounded">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="min"
            android:id="@+id/minus"
            android:textColor="#808080"
            android:background="@drawable/roundleft"
            android:onClick="result">
        </Button>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_weight="1"
            android:id="@+id/bhk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="0 Bathroom"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="Add"
            android:onClick="result"
            android:textColor="#808080"
            android:id="@+id/add"
            android:background="@drawable/round">
        </Button>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="Whats Included?"
        android:paddingLeft="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/feat28"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="10dp"
        android:lineSpacingExtra="3sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/feat27"
        android:layout_marginLeft="5dp"
        android:paddingLeft="10dp"
        android:lineSpacingExtra="3sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/feat29"
        android:layout_marginLeft="5dp"
        android:paddingLeft="10dp"
        android:lineSpacingExtra="3sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/feat30"
        android:layout_marginLeft="5dp"
        android:paddingLeft="10dp"
        android:lineSpacingExtra="3sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="bottom">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Continue"
            android:onClick="submit"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:background="#008e00"
            />

    </LinearLayout>

</LinearLayout>
