<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ac__installation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.suleman.finalproject.TapsnShowers"
    android:orientation="vertical"
    android:background="@color/activity_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/total_bg"
        android:id="@+id/be"
        android:layout_alignParentTop="true"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Estimated Total"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:layout_weight="0.4"
            android:textColor="@color/white"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Total : Rs 0"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:layout_weight="0.6"
            android:id="@+id/total"
            android:textAlignment="textEnd"
            android:textColor="@color/white"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select Quantity Based On Your Requirement"
        android:layout_margin="5dp"
        android:textSize="13sp"
        android:layout_below="@+id/be"
        android:id="@+id/txt"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/txt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="min"
                    android:id="@+id/minus"
                    android:textColor="#808080"
                    android:background="@drawable/roundleft"
                    android:onClick="result">
                </Button>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_weight="1"
                    android:id="@+id/tapRepair"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="0 Tap Repair"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="Add"
                    android:onClick="result"
                    android:textColor="#808080"
                    android:id="@+id/add"
                    android:background="@drawable/round">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="min"
                    android:id="@+id/minusJet"
                    android:textColor="#808080"
                    android:background="@drawable/roundleft"
                    android:onClick="result">
                </Button>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_weight="1"
                    android:id="@+id/jetRepair"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="0 Jet Repair"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="Add"
                    android:onClick="result"
                    android:textColor="#808080"
                    android:id="@+id/addJet"
                    android:background="@drawable/round">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="min"
                    android:id="@+id/minusShower"
                    android:textColor="#808080"
                    android:background="@drawable/roundleft"
                    android:onClick="result">
                </Button>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_weight="1"
                    android:id="@+id/showerRepair"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="0 Clogged Drain"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="Add"
                    android:onClick="result"
                    android:textColor="#808080"
                    android:id="@+id/addShower"
                    android:background="@drawable/round">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textColor="#808080"
                    android:text="min"
                    android:id="@+id/minusMixture"
                    android:background="@drawable/roundleft"
                    android:onClick="result">
                </Button>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:id="@+id/MixtureRepair"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="0 Wall Mixture Repair"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="Add"
                    android:onClick="result"
                    android:textColor="#808080"
                    android:id="@+id/addMixture"
                    android:background="@drawable/round">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="min"
                    android:id="@+id/minusTapInstall"
                    android:textColor="#808080"
                    android:background="@drawable/roundleft"
                    android:onClick="result">
                </Button>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_weight="1"
                    android:id="@+id/tapInstall"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="0 Tap Install"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="Add"
                    android:onClick="result"
                    android:textColor="#808080"
                    android:id="@+id/addTapInstall"
                    android:background="@drawable/round">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="min"
                    android:id="@+id/minusShowerInstall"
                    android:textColor="#808080"
                    android:background="@drawable/roundleft"
                    android:onClick="result">
                </Button>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_weight="1"
                    android:id="@+id/showerInstall"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="0 Shower Install"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="Add"
                    android:onClick="result"
                    android:textColor="#808080"
                    android:id="@+id/addShowerInstall"
                    android:background="@drawable/round">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="min"
                    android:id="@+id/minusJetInstall"
                    android:textColor="#808080"
                    android:background="@drawable/roundleft"
                    android:onClick="result">
                </Button>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_weight="1"
                    android:id="@+id/jetInstall"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="0 Jet / Handshower Install"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="Add"
                    android:onClick="result"
                    android:textColor="#808080"
                    android:id="@+id/addJetInstall"
                    android:background="@drawable/round">
                </Button>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="min"
                    android:id="@+id/minusMixtureInstall"
                    android:textColor="#808080"
                    android:background="@drawable/roundleft"
                    android:onClick="result">
                </Button>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_weight="1"
                    android:id="@+id/mixtureInstall"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="0 Mixture Tap Install"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="Add"
                    android:onClick="result"
                    android:textColor="#808080"
                    android:id="@+id/addMixtureInstall"
                    android:background="@drawable/round">
                </Button>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="Whats Included?"
                android:paddingLeft="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/feat60"
                android:layout_marginLeft="5dp"
                android:paddingLeft="10dp"
                android:lineSpacingExtra="3sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/feat61"
                android:layout_marginLeft="5dp"
                android:paddingLeft="10dp"
                android:lineSpacingExtra="3sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/feat39"
                android:layout_marginLeft="5dp"
                android:paddingLeft="10dp"/>

        </LinearLayout>

    </ScrollView>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:onClick="submit"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:background="#008e00"
        android:layout_alignParentBottom="true" />



</RelativeLayout>
